2014-09-02  Ramon Casero  <rcasero@gmail.com>

	* matlab/ItkToolbox/transformix.m: (0.2.0)

	- Now colour input figures are transformed and output in colour
	too, but transforming each channel, instead of converting to
	grayscale.

2014-09-01  Ramon Casero  <rcasero@gmail.com>

	* matlab/CardiacToolbox/histology_blockface_preprocessing.m: (0.2.0)

	- Now we input the elliptical (heart outline) and the polygonal
	(wax blockface) masks.

	- Correct scratches in block face.

	- Instead of finding threshold between background and foreground
	as the intersection of two gaussians, which doesn't work too well,
	we simply find the mode of intensities. Because there's a lot more
	background than tissue, the mode corresponds to the most typical
	background value. We then make all intensities that are <= the
	mode equal to zero. This is a very conservative threshold, that
	removes some background, but preserves practically all tissue.

	- We then extend the histograms of blockface and histology to
	cover the whole intensity range.

2014-08-29  Ramon Casero  <rcasero@gmail.com>

	* matlab/CardiacToolbox/blockface_create_masks.m: (0.2.0)

	- Instead of expr, input directory and result of dir().

	* matlab/CardiacToolbox/blockface_correct_perspective.m: (0.2.0)

	- Rewrite. Instead of for 2 images, apply perspective correction
	to set of files. Use new projective2d object and imwarp instead of
	old tform and imtransform.

	* Add matlab/CardiacToolbox/blockface_correct_frame_shifts.m: (0.1.0)

	- blockface_correct_frame_shifts Correct shift between blockface
	image frames.

	* matlab/ItkToolbox/elastix_compose_transf.m: (0.2.1)

	- Transpose affine matrix to match Matlab's tform convention.

	* matlab/ItkToolbox/elastix_compose_transf.m: (0.2.0)

	- Simplify. For the moment, only similarity transforms, but now we
	can convert any elastix affine transform to an affine matrix,
	compose the transforms, and then return a transform with the most
	flexible type of the two.
